Additional changes for proxy conversion.

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -46,7 +46,7 @@ ifeval::[{mlm-content} == true]
 **** xref:install-pubcloud.adoc[Public Cloud Deployment]
 *** xref:install-proxy.adoc[Proxy]
 **** xref:container-deployment/mlm/proxy-deployment-mlm.adoc[{productname} Proxy Deployment]
-**** xref:container-deployment/mlm/proxy-conversion-from-transactional-client-mlm.adoc[{productname} Proxy Conversion From Transactional Client]
+**** xref:container-deployment/mlm/proxy-conversion-from-client-mlm.adoc[{productname} Proxy Conversion From Client]
 **** xref:container-deployment/mlm/proxy-deployment-vm-mlm.adoc[Proxy Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/mlm/proxy-deployment-vmdk-mlm.adoc[Proxy Deployment Virtual Machine - VMware]
 **** xref:container-deployment/mlm/proxy-k3s-deployment-mlm.adoc[Proxy Deployment on K3s]
