--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-conversion-from-client-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-conversion-from-client-mlm.adoc
@@ -24,8 +24,16 @@ endif::[]
 The process of conversion is done entirely from the {webui} for already registered clients. 
 For more information about client onboarding, see xref:client-configuration:registration-overview.adoc[].
 
-.Procedure: Converting client to {productname} Proxy
+.Procedure: Converting client to {productname} Proxy using dedicated button
 . For the client chosen to be converted to proxy, go to its [literal]``Overview`` page.
-. Click the button btn:[Convert to Proxy].
+. Click button btn:[Convert to Proxy].
 . Wait for the conversion to complete.
+. Confirm that the conversion has happened by locating a new tab [literal]``Proxy`` on the [literal]``Overview`` page.
+
+
+.Procedure: Converting client to {productname} Proxy by changing client's properties
+. For the client chosen to be converted to proxy, go to its [literal]``Properties`` page.
+. Locate the section [literal]``Add-on System Types``.
+. Check the option [literal``Proxy``.
+. Click button btn:[Update Properties].
 . Confirm that the conversion has happened by locating a new tab [literal]``Proxy`` on the [literal]``Overview`` page.
