cont. according to info provided in the issue

--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -130,22 +130,25 @@ And then, the state also updates {salt}.
 
 // 5.0 and later
 
-. Reboot strategy: reboot and rebootifneeded action exist.
-  Users have the option to select and enable a reboot action.
+. With [systemitem]``reboot`` and [systemitem]``rebootifneeded`` two reboot strategies exist.
+  Users have the option to select and enable one reboot action from them.
 
-The following text is related to rebootifneeded.
++
 
-Reboot detection is, again, specific to the client OS. I'm not sure if this is documented somewhere, but IMHO we should. I think this should have its own documentation page, but I'll leave it up to you.
+[systemitem]``rebootifneeded``::
 
-For Debian/Ubuntu, we could just link to [3].
+Reboot detection is specific to the client operating system.
 
-For non-transactional SUSE clients, we check if any of the patches require reboot by using zypper -x list-patches, and reboot if so.
+* For Debian or Ubuntu, see https://www.debian.org/doc/debian-policy/ch-opersys.html#signaling-that-a-reboot-is-required.
 
-For transactional SUSE clients, we check if there's a pending transaction, and reboot if so.
+* For non-transactional {suse} clients, {productname} checks if any of the patches require reboot by using [command]``zypper -x list-patches``, and reboots if so.
 
-For the Red Hat-based clients, we use dnf -q needs-restarting -r or needs-restarting -r.
+* For transactional {suse} clients, {productname} checks if there is a pending transaction, and reboots if so.
 
-Customers can see the reboot_info.py module for more information [4].
+// FIXME: is this meant?
+* For the Red Hat-based clients, {productname} uses [command]``dnf -q needs-restarting -r``, and reboots if so.
+
+For more information, see the [literal]``reboot_info.py`` module: https://github.com/uyuni-project/uyuni/blob/master/susemanager-utils/susemanager-sls/src/modules/reboot_info.py
 
 
 
