--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -103,7 +103,7 @@ And then, the state also updates {salt}.
 
 --
 
-. The state runs the package manager, such as [command]``dnf``, [command]``yum``, [command]``apt``, or [command]``zypper`` based on what is available on the client OS to update the rest of the packages.
+. The state runs the package manager, such as [command]``dnf``, [command]``yum``, [command]``apt``, or [command]``zypper`` based on what is available on the client operating system to update the rest of the packages.
 
 +
 
@@ -135,6 +135,8 @@ And then, the state also updates {salt}.
 
 +
 
+--
+
 [systemitem]``rebootifneeded``::
 
 Reboot detection is specific to the client operating system.
@@ -145,8 +147,17 @@ Reboot detection is specific to the client operating system.
 
 * For transactional {suse} clients, {productname} checks if there is a pending transaction, and reboots if so.
 
++
+
 // FIXME: is this meant?
+
++
+
 * For the Red Hat-based clients, {productname} uses [command]``dnf -q needs-restarting -r``, and reboots if so.
+
+--
+
++
 
 For more information, see the [literal]``reboot_info.py`` module: https://github.com/uyuni-project/uyuni/blob/master/susemanager-utils/susemanager-sls/src/modules/reboot_info.py
 
