Add backup/restore docs, SSL certificate docs and containers overview (#3930)
* Add new backup/restore implementation
* Update SSL certificates and i's usage as secrets
* Document product containers
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -40,7 +40,7 @@ You can use the [systemitem]``set-cname`` parameter multiple times if you requir
 The private key and the server certificate can be found inside the server container in the directory [path]``/root/ssl-build/susemanager/`` as `server.key` and `server.crt`.
 The name of the last directory depends on the hostname used with `--set-hostname` option.
 
-Deploy or import the new certificate and key with the [command]``mgr-ssl-cert-setup`` tool.
+Deploy or import the new certificate and key by updating container's host podman secrets.
 For more information about importing the just generated certificate, see xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
 
 
