--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-conversion-from-client-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-conversion-from-client-mlm.adoc
@@ -12,7 +12,7 @@ The client which is a candidate for conversion to proxy must adhere to the follo
 
 * it must alredy be onboarded
 * it is reachable
-* it has access to Client Tools 
+* it has access to client tools 
 
 ifeval::[{mlm-content} == true]
 * it is a transactional system
