Added file for Uyuni.

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -33,6 +33,7 @@ ifeval::[{uyuni-content} == true]
 *** xref:install-proxy.adoc[Proxy]
 **** xref:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[Containerized {productname} Proxy Setup]
 **** xref:container-deployment/uyuni/proxy-deployment-uyuni.adoc[Proxy Deployment on {leapmicro}]
+**** xref:container-deployment/mlm/proxy-conversion-from-client-uyuni.adoc[{productname} Proxy Conversion From Client]
 **** xref:container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc[Proxy Deployment on K3s]
 endif::[]
 
