--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
@@ -83,7 +83,7 @@ mgradm migrate podman <oldserver.fqdn> --prepare
 
 [IMPORTANT]
 ====
-Do not pre-install {productname} on the prepared {sle-micro} {microversion} or {sles} {bci-suma} system. 
+Do not pre-install {productname} on the prepared {sle-micro} {microversion} or {sles} {bci-mlm} system. 
 The migration process is designed to perform the server installation automatically.
 Running [command]``mgradm install`` and then [command]``mgradm migrate``  is not supported and will lead to an unsupported system state.
 ====
