--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-conversion-from-client-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-conversion-from-client-mlm.adoc
@@ -3,7 +3,7 @@
 
 == Introduction
 
-This chapter describes a new way in which {productname} proxy can be registered with {productname} server.
+This chapter describes how {productname} proxy can be registered with {productname} server.
 It is simpler, more user-friendly, and less error-prone.
 
 The main principle consists of using a functionality within {webui} which converts an already onboarded client to a proxy.
