--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-conversion-from-client-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-conversion-from-client-mlm.adoc
@@ -10,7 +10,7 @@ The main principle consists of using a functionality within {webui} which conver
 
 The client which is a candidate for conversion to proxy must adhere to the following pre-requisites:
 
-* it must alredy be onboarded
+* it must already be onboarded
 * it is reachable
 * it has access to client tools 
 
