Action chains are user-specific. https://bugzilla.suse.com/show_bug.cgi?id=1242561 https://github.com/SUSE/spacewalk/issues/27166

--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -98,6 +98,14 @@ Action chains can include any number of these actions, in any order:
 
 
 
+[NOTE]
+====
+Action chains are user-specific.
+To see the action chain in the {webui}, you must sign in as the same user who created the action chain.
+====
+
+
+
 .Procedure: Creating a New Action Chain
 . In the {productname} {webui}, navigate to the first action you want to perform in the action chain.
   For example, navigate to [guimenu]``System Details`` for a client, and click btn:[Schedule System Reboot].
