--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -109,11 +109,10 @@ And then, the state also updates {salt}.
 
 --
 
-.. Listing all of the remaining packages that can be upgraded.
+.. The state lists all of the upgradable packages, based on the synchronized package repositories in {productname}.
 
-.. Upgrading the packages to their latest available version by using the client's package manager.
- The version depends on the synchronized repositories in {productname}.
- This is different depending on the operating system of the client:
+.. The state upgrades the packages to their latest available version by using the client's package manager.
+ The executed command depends on the operating system of the client:
 
 ... For Debian-based clients, such as Debian or Ubuntu, the action executes [command]``apt dist-upgrade -q -y $PACKAGES``.
 ... For RPM-based clients that are not SUSE, such as Red Hat Enterprise Linux or SUSE Liberty Linux, the action executes [command]``yum --quiet -y update $PACKAGES`` or [command]``dnf --quiet -y upgrade $PACKAGES`` (depending on the package manager the client is using).
@@ -130,8 +129,8 @@ And then, the state also updates {salt}.
 
 // 5.0 and later
 
-. With [systemitem]``reboot`` and [systemitem]``rebootifneeded`` two reboot strategies exist.
-  Users have the option to select and enable one reboot action from them.
+. {productname} provides the  [systemitem]``reboot`` and [systemitem]``rebootifneeded`` actions.
+Use one of the actions if you want your client to reboot after the package upgrade.
 
 +
 
@@ -143,9 +142,9 @@ Reboot detection is specific to the client operating system.
 
 * For Debian or Ubuntu, see https://www.debian.org/doc/debian-policy/ch-opersys.html#signaling-that-a-reboot-is-required.
 
-* For non-transactional {suse} clients, {productname} checks if any of the patches require reboot by using [command]``zypper -x list-patches``, and reboots if so.
+* For non-transactional {suse} clients, {productname} reboots the client when [command]``zypper -x list-patches`` indicates that the patches require a reboot.
 
-* For transactional {suse} clients, {productname} checks if there is a pending transaction, and reboots if so.
+* For transactional {suse} clients, {productname} reboots the client if there is a pending transaction.
 
 +
 
@@ -153,7 +152,7 @@ Reboot detection is specific to the client operating system.
 
 +
 
-* For the Red Hat-based clients, {productname} uses [command]``dnf -q needs-restarting -r``, and reboots if so.
+* For the Red Hat-based clients, {productname} reboots if [command]``dnf -q needs-restarting -r`` indicates that a reboot is required.
 
 --
 
