wording (per feedback)

--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -146,7 +146,7 @@ Reboot detection is specific to the client operating system.
 
 * For transactional {suse} clients, {productname} reboots the client if there is a pending transaction.
 
-* For the Red Hat-based clients, {productname} reboots if [command]``dnf -q needs-restarting -r`` indicates that a reboot is required.
+* For the Red Hat-based clients, {productname} reboots the client if [command]``dnf -q needs-restarting -r`` indicates that a reboot is required.
 
 --
 
