From50 cw uptodate #26678 keichwa (#3943)
* Update modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
* wording (per feedback)

--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -117,7 +117,7 @@ And then, the state also updates {salt}.
 ... For Debian-based clients, such as Debian or Ubuntu, the action executes [command]``apt dist-upgrade -q -y $PACKAGES``.
 ... For RPM-based clients that are not SUSE, such as Red Hat Enterprise Linux or SUSE Liberty Linux, the action executes [command]``yum --quiet -y update $PACKAGES`` or [command]``dnf --quiet -y upgrade $PACKAGES`` (depending on the package manager the client is using).
 ... For non-transactional SUSE clients, such as SUSE Linux Enterprise 15, the action executes [command]``zypper --non-interactive --auto-agree-with-licenses update $PACKAGES``.
-... For transactional SUSE clients, the action executes the same in a transactional shell.
+... For transactional {suse} clients, the action executes the same in a transactional shell.
 
 --
 
@@ -146,7 +146,7 @@ Reboot detection is specific to the client operating system.
 
 * For transactional {suse} clients, {productname} reboots the client if there is a pending transaction.
 
-* For the Red Hat-based clients, {productname} reboots if [command]``dnf -q needs-restarting -r`` indicates that a reboot is required.
+* For the Red Hat-based clients, {productname} reboots the client if [command]``dnf -q needs-restarting -r`` indicates that a reboot is required.
 
 --
 
