--- a/modules/reference/pages/admin/cobbler.adoc
+++ b/modules/reference/pages/admin/cobbler.adoc
@@ -11,3 +11,8 @@ For more information about autoinstallation powered by {cobbler}, see xref:clien
 {suse} only supports {cobbler} functions that are available in the {productname} {webui}, or through the {productname} API.
 Only supported features are documented here.
 ====
+
+[IMPORTANT]
+====
+Using NFS for the persisent volumes of {cobbler} is not supported.
+====
