Changed the parameter name.

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -88,6 +88,7 @@ endif::[]
 *** xref:salt/salt-scaling-minions.adoc[Scaling Minions]
 *** xref:salt/salt-connectivity.adoc[Salt Connectivity]
 *** xref:salt/salt-monitoring.adoc[Monitoring Salt]
+*** xref:salt/salt-timeouts.adoc[Salt Timeouts]
 ** xref:large-deployments/overview.adoc[Large Deployments Guide]
 *** xref:large-deployments/hardware-reqs.adoc[Hardware Requirements]
 *** xref:large-deployments/single-server.adoc[Single Server]
