--- a/modules/specialized-guides/pages/salt/salt-timeouts.adoc
+++ b/modules/specialized-guides/pages/salt/salt-timeouts.adoc
@@ -51,11 +51,11 @@ If a client does not reply to a ping within the allocated time, it is marked as 
 The {webui} shows a [systemitem]``minion is down or could not be contacted`` message in this case.
 
 The presence ping timeout parameter changes the timeout setting for the presence ping, in seconds.
-Adjust the [systemitem]``java.salt_presence_ping_timeout`` parameter.
+Adjust the [systemitem]``salt_presence_ping_timeout`` parameter.
 Defaults to 4 seconds.
 
 The presence ping gather job parameter changes the timeout setting for gathering the presence ping, in seconds.
-Adjust the [systemitem]``java.salt_presence_ping_gather_job_timeout`` parameter.
+Adjust the [systemitem]``salt_presence_ping_gather_job_timeout`` parameter.
 Defaults to 1 second.
 
 
