--- a/modules/specialized-guides/pages/salt/salt-timeouts.adoc
+++ b/modules/specialized-guides/pages/salt/salt-timeouts.adoc
@@ -37,7 +37,7 @@ You can configure these values differently by creating a [filename]``/etc/salt/m
 
 Before Actions are executed on Salt clients, whether they scheduled via the Web UI or the API, {productname} performs a "presence ping" command to ensure the respective `salt-minion` processes are active and able to respond. Then, a ping gather job runs on the Salt master to handle the incoming pings from the clients. Actual commands will begin only after all clients have either responded to the ping, or timed out.
 
-The presence ping is an ordinary Salt command, but is not subject to the same timeout parameters as all other Salt commands (`timeout`/`gather_job_timeout`, described above). Rather, it has its own parameters (`**salt.presence_ping_timeout**`/`**salt.presence_ping_gather_job_timeout**`) that can be set in [filename]``/etc/rhn/rhn.conf``.
+The presence ping is an ordinary Salt command, but is not subject to the same timeout parameters as all other Salt commands (`timeout`/`gather_job_timeout`, described above). Rather, it has its own parameters (`salt.presence_ping_timeout`/`salt.presence_ping_gather_job_timeout`) that can be set in [filename]``/etc/rhn/rhn.conf``.
 
 To allow for quicker detection of unresponsive clients, the timeout values for presence pings are by default significantly shorter than the general defaults. You can configure the presence ping parameters in [filename]``/etc/rhn/rhn.conf``, however the default values should be sufficient in most cases.
 
@@ -51,7 +51,7 @@ If a client does not reply to a ping within the allocated time, it is marked as 
 The {webui} shows a [systemitem]``minion is down or could not be contacted`` message in this case.
 
 The presence ping timeout parameter changes the timeout setting for the presence ping, in seconds.
-Adjust the [systemitem]``salt_presence_ping_timeout`` parameter.
+Adjust the [systemitem]``java.salt_presence_ping_timeout`` parameter.
 Defaults to 4 seconds.
 
 The presence ping gather job parameter changes the timeout setting for gathering the presence ping, in seconds.
