--- a/modules/specialized-guides/pages/salt/salt-timeouts.adoc
+++ b/modules/specialized-guides/pages/salt/salt-timeouts.adoc
@@ -55,7 +55,7 @@ Adjust the [systemitem]``java.salt_presence_ping_timeout`` parameter.
 Defaults to 4 seconds.
 
 The presence ping gather job parameter changes the timeout setting for gathering the presence ping, in seconds.
-Adjust the [systemitem]``salt_presence_ping_gather_job_timeout`` parameter.
+Adjust the [systemitem]``java.salt_presence_ping_gather_job_timeout`` parameter.
 Defaults to 1 second.
 
 
