Apply suggestions from code review

--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -152,28 +152,10 @@ And then, the state also updates {salt}.
 
 // 5.0 and later
 
-. {productname} provides the  [systemitem]``reboot`` and [systemitem]``rebootifneeded`` actions.
-Use one of the actions if you want your client to reboot after the package upgrade.
+. If {productname} detects that  [systemitem]``reboot`` is necessary, {productname} will automatically reboot that client.
 
 +
 
---
-
-[systemitem]``rebootifneeded``::
-
-Reboot detection is specific to the client operating system.
-
-* For Debian or Ubuntu, see https://www.debian.org/doc/debian-policy/ch-opersys.html#signaling-that-a-reboot-is-required.
-
-* For non-transactional {suse} clients, {productname} reboots the client when [command]``zypper -x list-patches`` indicates that the patches require a reboot.
-
-* For transactional {suse} clients, {productname} reboots the client if there is a pending transaction.
-
-* For the Red Hat-based clients, {productname} reboots the client if [command]``dnf -q needs-restarting -r`` indicates that a reboot is required.
-
---
-
-+
 
 For more information, see the [literal]``reboot_info.py`` module: https://github.com/uyuni-project/uyuni/blob/master/susemanager-utils/susemanager-sls/src/modules/reboot_info.py
 
