--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -272,7 +272,8 @@ See the tables in this section for guides to estimate the size required.
 
 [IMPORTANT]
 ====
-Do not use NFS for storage. It is not supported.
+Do not use NFS for storage.
+It is not supported.
 ====
 
 On the {productname} Server, use this command to find all available storage devices:
